ADD_EXECUTABLE(sorting_algorithm sorting_algorithm.cc)
TARGET_LINK_LIBRARIES(sorting_algorithm phosphor)

ADD_EXECUTABLE(statistics statistics.cc)
TARGET_LINK_LIBRARIES(statistics phosphor)

ADD_EXECUTABLE(solo solo.cc)
TARGET_LINK_LIBRARIES(solo phosphor)

ADD_EXECUTABLE(loop loop.cc)
TARGET_LINK_LIBRARIES(loop phosphor)
